Fixing contact title on mobile

--- a/src/styles/contact.css
+++ b/src/styles/contact.css
@@ -107,7 +107,7 @@ label {
   }
 
   .contact-title {
-    padding-top: 2rem;
+    padding-top: 10rem;
     margin-bottom: 2rem;
   }
 }
